--- a/README
+++ b/README
@@ -10,3 +10,9 @@ a set of scripts to import/export DAZStudio4 files into/out of blender, like
 The initial announcement was made in a forum at renderosity.com:
 
   http://www.renderosity.com/mod/forumpro/showthread.php?thread_id=2834649
+  
+This code has been incorporated into Khalibloo panel and improved:
+
+  Source Code: https://bitbucket.org/Khalibloo/khalibloo-panel/src/master/
+  
+  Discussion: https://blenderartists.org/t/khalibloo-panel/596208
